[gd_scene load_steps=43 format=3 uid="uid://bgwpyuhw31t8i"]

[ext_resource type="Script" uid="uid://dth8wwl8iu5f8" path="res://scripts/player_controller.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://cmw1jn0kobuem" path="res://assets/vampire.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b1p01ya63mxf4" path="res://assets/vampire_bite.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://bbto2httc1kku" path="res://assets/bite_blood.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b4mynfo10fpk2" path="res://assets/vampire_bat.png" id="3_y4r1p"]
[ext_resource type="Texture2D" uid="uid://droiubnapwyb" path="res://assets/vampire_dead.png" id="4_qlg0r"]
[ext_resource type="AudioStream" uid="uid://djghhsjktojqh" path="res://assets/sounds/bite (1).mp3" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://cpt4ebyyvohhf" path="res://assets/sounds/hitHurt.wav" id="7_fjrip"]
[ext_resource type="AudioStream" uid="uid://dusju8edg5r1u" path="res://assets/sounds/DashSound.mp3" id="8_smehm"]
[ext_resource type="AudioStream" uid="uid://d3k0fnvu2s87e" path="res://assets/sounds/Footstepss-_1_.mp3" id="9_ur7pv"]
[ext_resource type="Texture2D" uid="uid://08egpbwbw8c6" path="res://assets/tranformation.png" id="11_d2wvv"]
[ext_resource type="AudioStream" uid="uid://c7wpe3l1w5q7" path="res://assets/sounds/dungeon (1).mp3" id="12_3v2ag"]
[ext_resource type="AudioStream" uid="uid://buluexrr76cq2" path="res://assets/sounds/bat_screech.mp3" id="13_jej6c"]
[ext_resource type="AudioStream" uid="uid://2s10durql6ud" path="res://assets/sounds/batflap.mp3" id="14_f1ej7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_qhqgy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_qhqgy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_y4r1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_y4r1p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_y4r1p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_y4r1p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_y4r1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_y4r1p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_y4r1p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_y4r1p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_qhqgy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jej6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"back_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"bat_fly",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"bat_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dqkch")
}],
"loop": false,
"name": &"bite",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qlg0r")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"front_walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(11, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(27, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("3_qhqgy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": false,
"name": &"bite",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y4r1p"]
radius = 31.4006

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("11_d2wvv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("11_d2wvv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("11_d2wvv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("11_d2wvv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("11_d2wvv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujl30"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}],
"loop": false,
"name": &"explode",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"none",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_jej6c")
animation = &"bat_idle"
autoplay = "front_idle"
frame = 1
frame_progress = 0.728106

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3.5)
shape = SubResource("RectangleShape2D_dqkch")

[node name="DamageOrbitatingPoint" type="Node2D" parent="."]

[node name="DamageBox" type="Area2D" parent="DamageOrbitatingPoint"]
position = Vector2(15, 0)
collision_layer = 255
collision_mask = 255
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageOrbitatingPoint/DamageBox"]
position = Vector2(-1.5, 3.5)
shape = SubResource("RectangleShape2D_g2els")
debug_color = Color(0.994529, 0, 0.220606, 0.42)

[node name="Bite" type="AnimatedSprite2D" parent="DamageOrbitatingPoint"]
visible = false
position = Vector2(15, 0)
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"bite"
frame = 2
frame_progress = 1.0

[node name="SoundListener" type="AudioListener2D" parent="."]

[node name="BiteSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tuyoq")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fjrip")

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_smehm")

[node name="StepSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ur7pv")

[node name="BatDamageArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatDamageArea"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_y4r1p")
debug_color = Color(0.997495, 0.0414232, 0, 0.42)

[node name="Transformation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ujl30")
animation = &"explode"
autoplay = "none"
frame = 3
frame_progress = 1.0

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_3v2ag")
autoplay = true

[node name="BatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_jej6c")

[node name="BatFlap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_f1ej7")

[connection signal="body_entered" from="DamageOrbitatingPoint/DamageBox" to="." method="_on_damage_box_body_entered"]
[connection signal="animation_finished" from="DamageOrbitatingPoint/Bite" to="." method="_on_bite_animation_finished"]
[connection signal="body_entered" from="BatDamageArea" to="." method="_on_bat_damage_area_body_entered"]
